# inst204-audit1

./: .buildinfo  .gitattributes  README.md  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
trend2_analysis/: _config.yml  _toc.yml  intro.md
trend2_analysis/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree  trend2_analysis.doctree
trend2_analysis/_build/html/: .buildinfo  genindex.html  intro.html  markdown.html  notebooks.html  search.html  searchindex.js
trend2_analysis/_build/html/_sources/: intro.md
trend2_analysis/_build/jupyter_execute/: markdown-notebooks.ipynb
trend2_analysis/data/: Cook County Regional Gang Intelligence Database.xlsx  Cook_County_Digital_Equity_Score_Tracts.dbf  Cook_County_Digital_Equity_Score_Tracts.shp  Cook_County_Digital_Equity_Score_Tracts.shx  cook_county_filtered_zips.dbf  cook_county_filtered_zips.shp  cook_county_filtered_zips.shx  cook_county_zip_codes.json  us_filtered_zips.dbf  us_filtered_zips.shx
