[project]
name = "inst204-audit1"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Zhang",email = "46502662+kevin777787@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)",
    "ghp-import (>=2.1.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
